--- a/content/post/2009-05-06-haskell-中的可变长参数列表.md
+++ b/content/post/2009-05-06-haskell-中的可变长参数列表.md
@@ -51,14 +51,14 @@ buildString = buildString' []
 
 另外，关于我在这里为什么要用 `Char` 而不是 `Int` 呢，是因为 `'a'` 的类型很明确，就是 `Char` ，而 `5` 的类型就不明确了，因此，你可以这样调用 `buildString` ：
 
-```
+``` haskell
 *TestVarargs> buildString 'a' 'b' 'c' :: String
 "abc"
 ```
 
 可是却必须这样调用 `buildIntList` ：
 
-```
+``` haskell
 *TestVarargs> buildIntList (1::Int) (2::Int) (3::Int) :: [Int]
 [1,2,3]
 ```
