--- a/content/post/2011-03-05-linux-下有关环境变量与换行符的一个小问题.md
+++ b/content/post/2011-03-05-linux-下有关环境变量与换行符的一个小问题.md
@@ -22,13 +22,13 @@ export VAR1=$VAR1:$VAR2
 
 然后，执行一下命令：
 
-``` plain
+``` bash
 $ . ./test.sh
 ```
 
 来使环境变量生效，并看一下结果：
 
-``` plain
+``` bash
 $ echo $VAR1
 :helloahblah
 ```
