--- a/content/post/2011-03-12-总结一下学到的-lvs-相关知识（-nat-模式）.md
+++ b/content/post/2011-03-12-总结一下学到的-lvs-相关知识（-nat-模式）.md
@@ -25,19 +25,19 @@ $ sudo ipvsadm -A -t 192.168.0.1:22 -s rr
 
 `-A` 表示增加一个新的负载均衡服务，一台负载均衡器上可以同时对多个服务进行负载； `-t` 表示这是一个 TCP 服务； `-s rr` 表示选择 Round Robin 分配策略。 Round Robin 是最简单的一种分配策略，表示在每台真实服务器间进行轮流选择；其他还有最少连接等策略。
 
-```
+``` plain
 $ sudo ipvsadm -a -t 192.168.0.1:22 -r 192.168.1.2:22 -m
 ```
 
 `-a` 表示为指定的负载服务增加一个新的真实服务； `-t` 同上； `-r` 指定真实服务的地址和端口； `-m` 则表示这个真实服务采用的是 NAT 模式的负载均衡。
 
-```
+``` plain
 $ sudo ipvsadm -a -t 192.168.0.1:22 -r 192.168.1.3:22 -m
 ```
 
 这样负载均衡服务就配置好了。当然，记得还要打开系统的 IP 转发功能，不管你用的是哪种负载均衡。真实服务器上则还需要配置路由规则，把回给客户端的路由通过 `192.168.1.1` 这个网关进行发送（不指定网关地址，只指定网口是不行的）：
 
-```
+``` plain
 $ sudo route add -net 192.168.0.0/24 gw 192.168.1.1
 ```
 
@@ -45,7 +45,7 @@ $ sudo route add -net 192.168.0.0/24 gw 192.168.1.1
 
 用如下命令可以查看当前的负载状态：
 
-```
+``` plain
 $ sudo ipvsadm -l -n
 ```
 
