--- a/content/post/2011-03-13-总结一下学到的-lvs-相关知识（-dr-模式）.md
+++ b/content/post/2011-03-13-总结一下学到的-lvs-相关知识（-dr-模式）.md
@@ -55,21 +55,21 @@ MAC_DIP->MAC_RIP1(CIP->VIP) | |  |  VIP->CIP
 
 这样一来，相比 NAT 模式而言，其额外的配置工作主要就是 `VIP` 从地址的配置以及 ARP 相关功能的禁用了。让我们一步一步来吧。首先是负载机的 `VIP` 配置（真实地址的配置就跟正常的一样，不写了）：
 
-```
+``` plain
 $ sudo ifconfig eth0:0 192.168.1.110 broadcast 192.168.1.110 netmask 255.255.255.255
 $ sudo route add -host 192.168.1.110 eth0:0
 ```
 
 然后是真实服务器的 `VIP` 配置：
 
-```
+``` plain
 $ sudo ifconfig lo:0 192.168.1.110 broadcast 192.168.1.110 netmask 255.255.255.255
 $ sudo route add -host 192.168.1.110 eth0:0
 ```
 
 与负载机唯一不同的就是要把地址配到 `lo` 上。接下来是禁掉这个网卡的 ARP 相关的功能（这里就用不了 `sudo` 了，必须直接用 `root` 用户，不知道为嘛）：
 
-```
+``` plain
 # echo 1 > /proc/sys/net/ipv4/conf/lo/arp_ignore
 # echo 2 > /proc/sys/net/ipv4/conf/lo/arp_announce
 # echo 1 > /proc/sys/net/ipv4/conf/all/arp_ignore
@@ -80,7 +80,7 @@ $ sudo route add -host 192.168.1.110 eth0:0
 
 地址配完了，最后就是 ipvsadm 本身的配置了：
 
-```
+``` plain
 $ sudo ipvsadm -A -t 192.168.1.110:22 -s rr
 $ sudo ipvsadm -a -t 192.168.1.110:22 -r 192.168.1.2:22 -g
 $ sudo ipvsadm -a -t 192.168.1.110:22 -r 192.168.1.3:22 -g
