--- a/content/post/2017-12-18-quasar-开发中的跨域问题.md
+++ b/content/post/2017-12-18-quasar-开发中的跨域问题.md
@@ -34,12 +34,12 @@ tags:
 
 > `Failed to load http://xxx.xxx:11001/yyy: No 'Access-Control-Allow-Origin' header is present on the requested resource. Origin 'http://localhost:8080' is therefore not allowed access.`
 
-天真的我第一时间就去搜 Access-Control-Allow-Origin 的解决方案啦，毕竟以前刚好看到过 CORS 这个名词来着，然后就开始折腾我们的测试服务器了。spring boot 本身加 CORS 支持还是挺简单的，然而加上之后，应答的默认编码却莫名地变成了 latin-1；改了全局的默认应答编码，则又会出现其他问题，搞得我头大不已 :joy:
+天真的我第一时间就去搜 Access-Control-Allow-Origin 的解决方案啦，毕竟以前刚好看到过 CORS 这个名词来着，然后就开始折腾我们的测试服务器了。spring boot 本身加 CORS 支持还是挺简单的，然而加上之后，应答的默认编码却莫名地变成了 latin-1；改了全局的默认应答编码，则又会出现其他问题，搞得我头大不已 😂
 
-终于，在某一次神奇的洗澡时间里，我忽然就想通了，这明明就是浏览器不认那个应答而已，又不是应答本身有啥问题，那我关了浏览器的这个检查不就好了嘛 :joy: 反正也只是在开发时会有这个问题而已，正常（手机）使用又没事，怎么能这样就对服务端乱搞不是 :joy:
+终于，在某一次神奇的洗澡时间里，我忽然就想通了，这明明就是浏览器不认那个应答而已，又不是应答本身有啥问题，那我关了浏览器的这个检查不就好了嘛 😂 反正也只是在开发时会有这个问题而已，正常（手机）使用又没事，怎么能这样就对服务端乱搞不是 😂
 
 于是赶紧上网搜了搜，发现 firefox 想关这个还有点儿麻烦，而 chrome 就简单多了，启动时加个参数 `--disable-web-security` 即可；然而这个是全局的，为了不影响正常使用，我又去单搞了个 portable chrome 用来专职开发。
 
 ![完美](/img/perfect.png#center)
 
-（原来我还挺啰嗦的，小时候有这种凑字数能力多好 :joy:
+（原来我还挺啰嗦的，小时候有这种凑字数能力多好 😂
