补上忘记的文末结束符😂

--- a/content/post/2018-04-05-cmder-颜色配置.md
+++ b/content/post/2018-04-05-cmder-颜色配置.md
@@ -28,3 +28,5 @@ emmm 进入正题……之前没在 Windows 下搞过 node.js 开发的时候还
 ![最终效果图](/img/2018-04-05/cmder-final.png#center)
 
 嘛，虽然原来的背景色没了，不过至少能看了不是😂
+
+<!--more-->
