新文章《纯软件共享有线键鼠》，同时修了下主题和警告

--- a/content/post/2009-03-19-对-bison-手册中的-c-的例子的总结.md
+++ b/content/post/2009-03-19-对-bison-手册中的-c-的例子的总结.md
@@ -27,7 +27,7 @@ tags:
 
 -----
 
-如我在[上一篇 Blog]({{< relref "post/2009-03-18-bison-中的-prologue-的格式变迁.md" >}}) 中所说，分别在 `%union` 的前后放不同的 `%{ %}` 形式的 Prologue 这种方式对于需要输出头文件的情况已经不适用了，新的方法为在
+如我在[上一篇 Blog]({{< relref "/post/2009-03-18-bison-中的-prologue-的格式变迁.md" >}}) 中所说，分别在 `%union` 的前后放不同的 `%{ %}` 形式的 Prologue 这种方式对于需要输出头文件的情况已经不适用了，新的方法为在
 
 ``` bison
 %code requires { ... }
