--- a/content/post/2010-09-18-用-python-操作虚拟网卡.md
+++ b/content/post/2010-09-18-用-python-操作虚拟网卡.md
@@ -8,7 +8,7 @@ tags:
   - windows
 ---
 
-在我的 [XTunnel]({{< relref "post/2009-12-19-利用-xmpp-协议实现-vpn.md" >}}) 项目中，已经用 Python 作过这种相对底层的工作了（这说明 Python 果然还是非常强大的，上下层通吃啊），不过那边目前还是只实现了 Linux 的版本。后来我又陆陆续续地把 Windows 以及 Mac 下的操作方法给搞通了，今天就来总结一下。
+在我的 [XTunnel]({{< relref "/post/2009-12-19-利用-xmpp-协议实现-vpn.md" >}}) 项目中，已经用 Python 作过这种相对底层的工作了（这说明 Python 果然还是非常强大的，上下层通吃啊），不过那边目前还是只实现了 Linux 的版本。后来我又陆陆续续地把 Windows 以及 Mac 下的操作方法给搞通了，今天就来总结一下。
 
 在 Linux 内核中，特别是在现在的发行版中，应该都已经有了 `TUN/TAP` 虚拟网卡的驱动程序，看一下有没有 `/dev/net/tun` 这个文件就可以知道了。如果没有，就执行一下 `sudo modprobe tun` 这个命令吧。如果还是没有，那就 Google 之吧。下面上代码：
 
